# Awesome-Game

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  test
header/: Game.h  GameManager.h  abilities.h  boss.h  character.h  gameManager.h  item.h  itembox.h  items.h  playableCharacter.h  specialTrait.h  sword.h
src/: Game.cpp  abilities.cpp  boss.cpp  character.cpp  gameManager.cpp  itembox.cpp  items.cpp  main.cpp  playableCharacter.cpp  sword.cpp
tests/: abilitytest.cpp  bosstest.cpp  characterTest.cpp  gametest.cpp  itemstest.cpp  playableCharacterTests.cpp  test.cpp
